<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateMobActivity">

    <TextView
        android:id="@+id/brand_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="270dp"
        android:text="@string/brand"
        android:textSize="18sp"
        android:textColor="#0000FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/brand_input"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="128dp"
        android:hint="@string/brand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/model_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="270dp"
        android:text="@string/model"
        android:textSize="18sp"
        android:textColor="#0000FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/model_input"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="128dp"
        android:hint="@string/model"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand_input" />

    <TextView
        android:id="@+id/os_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="270dp"
        android:text="@string/os"
        android:textSize="18sp"
        android:textColor="#0000FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/model_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/os_input"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="128dp"
        android:hint="@string/os"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/model_input" />

    <TextView
        android:id="@+id/color_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="270dp"
        android:text="@string/color"
        android:textSize="18sp"
        android:textColor="#0000FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/os_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/color_input"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="128dp"
        android:hint="@string/color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/os_input" />

    <TextView
        android:id="@+id/year_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="270dp"
        android:text="@string/year"
        android:textSize="18sp"
        android:textColor="#0000FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/year_input"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="128dp"
        android:hint="@string/year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_input" />

    <TextView
        android:id="@+id/price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="270dp"
        android:text="@string/price"
        android:textSize="18sp"
        android:textColor="#0000FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/price_input"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="128dp"
        android:hint="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_input" />

    <Button
        android:id="@+id/save_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_input" />

</androidx.constraintlayout.widget.ConstraintLayout>